crates/core/src/plan/snapshots/gunk_core__plan__tests__drop_multiple_commits.snap
---
source: crates/core/src/plan/tests.rs
assertion_line: 947
expression: result
---
Rebase:
  base: ~
  lines:
    - Pick: A
    - Drop: B
    - Pick: C
    - Drop: D
    - Pick: E
  message_map: []
  author_map: []
