crates/core/src/plan/snapshots/gunk_core__plan__tests__drop_single_commit.snap
---
source: crates/core/src/plan.rs
assertion_line: 936
expression: result
---
Rebase:
  base: ~
  lines:
    - Pick: A
    - Pick: B
    - Drop: C
    - Pick: D
    - Pick: E
  message_map: []
  author_map: []
