crates/core/src/plan/snapshots/gunk_core__plan__tests__filter_repo_plus_rebase_composite.snap
---
source: crates/core/src/plan.rs
assertion_line: 1065
expression: result
---
Composite:
  - FilterRepo:
      paths:
        - secrets.env
      add_to_gitignore: false
  - Rebase:
      base: ~
      lines:
        - Pick: A
        - Pick: B
        - Reword: C
        - Pick: D
        - Pick: E
      message_map:
        - - C
          - Updated C
      author_map: []
