crates/core/src/plan/snapshots/gunk_core__plan__tests__fixup_adjacent.snap
---
source: crates/core/src/plan.rs
assertion_line: 928
expression: result
---
Rebase:
  base: ~
  lines:
    - Pick: A
    - Pick: B
    - Fixup: C
    - Pick: D
    - Pick: E
  message_map: []
  author_map: []
