crates/core/src/plan/snapshots/gunk_core__plan__tests__fixup_non_adjacent_auto_reorder.snap
---
source: crates/core/src/plan/tests.rs
expression: result
---
Rebase:
  base: ~
  lines:
    - Pick: A
    - Pick: B
    - Fixup: D
    - Pick: C
    - Pick: E
  message_map: []
  author_map: []
