crates/core/src/plan/snapshots/gunk_core__plan__tests__flatten_merge.snap
---
source: crates/core/src/plan.rs
assertion_line: 977
expression: result
---
Flatten:
  merge: M
  mainline_parent: D
  message: "Merge branch 'feature'\n\nMerged feature branch"
