crates/core/src/plan/snapshots/gunk_core__plan__tests__flatten_plus_rebase_composite.snap
---
source: crates/core/src/plan/tests.rs
expression: result
---
Composite:
  - Flatten:
      merge: M
      mainline_parent: D
      message: "Merge branch 'feature'\n\nMerged feature branch"
      strategy: PreserveDescendantMerges
  - Rebase:
      base: ~
      lines:
        - Pick: A
        - Pick: B
        - Reword: C
        - Pick: D
        - Pick: M
        - Pick: E
      message_map:
        - - C
          - Updated C
      author_map: []
