crates/core/src/plan/snapshots/gunk_core__plan__tests__independent_squash_groups.snap
---
source: crates/core/src/plan.rs
assertion_line: 1098
expression: result
---
Rebase:
  base: ~
  lines:
    - Pick: A
    - Pick: B
    - Squash: C
    - Pick: D
    - Fixup: E
  message_map: []
  author_map: []
