crates/core/src/plan/snapshots/gunk_core__plan__tests__remove_paths.snap
---
source: crates/core/src/plan.rs
assertion_line: 969
expression: result
---
FilterRepo:
  paths:
    - secrets.env
    - "*.log"
  add_to_gitignore: true
